...

    <string name="button_show_dialog">Show Dialog</string>
    <string name="button_fragment">Fragment Button</string>
    <string name="main_button_sample">Show Sample</string>
    <string name="main_button_dialog_fragment_test">Show Dialog Fragment Test</string>
    <string name="main_button_fragment_listener_test">Show Fragment Listener Test</string>
    <string name="fragment_test_textview_clicked_button">Button clicked.</string>
    <string name="fragment_test_textview_selected_item">Item selected: %1$s</string>
    <string name="dialog_test_textview_result">Result: %1$s, which=%2$d</string>

    <string-array name="cancelable_list">
        <item>@string/cancelable</item>
        <item>@string/non_cancelable</item>
...
